--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,12 @@
 /*----modal images-----*/
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
+
+input, input:before, input:after, textarea {
+  -webkit-user-select: initial !important;
+  -khtml-user-select: initial !important;
+  -moz-user-select: initial !important;
+  -ms-user-select: initial !important;
+  user-select: initial !important;
+ } 
 
 #myImg {
   border-radius: 5px;
@@ -82,19 +88,8 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
-  .modal-content {
-    width: 100%;
-  }
-}
-</style>
 
 /*----end of modal images -----*/
-
-
-
-/*--variables --*/
-
 input, input:before, input:after, textarea {
   -webkit-user-select: initial !important;
   -khtml-user-select: initial !important;
@@ -102,6 +97,11 @@ input, input:before, input:after, textarea {
   -ms-user-select: initial !important;
   user-select: initial !important;
  } 
+
+
+/*--variables --*/
+
+
 
 :root {
   --category-bg-color: #00c98d;
@@ -1481,6 +1481,9 @@ a {
 }
 
 /* Icomoon fonts */
+.p-intro-new-experience{
+  padding-top: 20px;
+}
 
 body {
   margin: 0;
@@ -1639,6 +1642,9 @@ input[type=file] {
 }
 
 @media (max-width: 768px) {
+  .modal-content {
+    width: 100%;
+  }
   .paragraph-payment{
     border-right: none !important;
     border-bottom: 1px solid #dee2e6!important;
@@ -1774,8 +1780,8 @@ margin-top: 90px;
 
   .container-slider p {
     margin-left: 0px;
-    padding-top: 20px;
   }
+
 
   .container-slider {
     padding-left: 15px !important;
