fix: fixed bug in subscribe & profile

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -43,7 +43,7 @@
         <div class="footer-widget ">
           <h3 class="footer-title">Subscribe Newsletter</h3>
             <div class="newsletter-form mx-auto">
-              <input id="subscribe" class="form-control" placeholder="Enter your email address" type="text">
+              <input id="subscribe" class="form-control" placeholder="Enter your email address" type="email">
               <button class="btn btn-default btn-sm news-letter-button" type="submit" id="sendSub">GO!</button>
             </div>
         </div>
